2004-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/feature.c: fixed leak of edge_rec.coords memory
	in the bug 741854 fix in vrf_get_ring_coords().

2004-02-18  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_info/ogdi_info.c: use ecs_CleanUp() to free contents
	of result from cln_DestroyClient().  Minor memory leak. 

	* vpflib/strfunc.c: leftjust() - avoid use of strcpy() for overlapping
	string moves.  Reported by Craig Bruce, verified with valgrind. 

=============================================================================

2003-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* Release OGDI 3.1.2.

	* ogdi/include/ecs_util.h: updated version to 3.1.2.

	* config/darwin.cfg: new configuration file for MacOS 10.3.

	* vpflib/ coorgeom.c, vpfprim.c, vpftable.h, xvt.h:
	Avoid use of obsolete values.h and malloc.h in order to compile
	properly on MacOS 10.3.  Submitted by Greg Allen.

2003-08-27  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/c-api/ecssplit.c: Modififed ecs_SplitURL() to release
	regular expression resources if called with a NULL url.

	* ogdi/c-api/client.c: Modified cln_DestroyClient() to call
	ecs_SplitURL(NULL) to free static resources.Well, go

	* ogdi/drivers/adrg/utils.c: Fixed problem in _read_adrg(), 
	_read_overview(), and _initRegionWithDefault() such that the files 
	were never closed.  As per bug 795612.

	* ogdi/drivers/adrg/adrg.c: Fixed _releaseAllLayers() so it release
	from the last layer to the first.  It seems that ecs_FreeLayer() 
	now decrements the s->nblayers but didn't use to at some point in the
	distant past.  This bug was discovered while investigating the leaks
	described in sourceforge bug 795612.

2003-05-22  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/feature.c, utils.c: Fixed several problems related
	to bug 741854, primarily related to VITD area features causing hangs
	and crashes.  

2003-01-29  Frank Warmerdam  <warmerdam@pobox.com>
